# mc_robot_description

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build_docker.sh  entrypoint.sh  package.xml
.github/actions/setup-docker/: action.yaml
.github/workflows/: ci.yaml  pr.yaml
launch/: rsp.launch.py  rviz_current.launch.py  rviz_current.py  rviz_goal.launch.py  rviz_goal.py
rviz/: animation.rviz
scripts/: init_joint_states_once.py  launch_rviz_current.sh  launch_rviz_goal.sh
urdfs/: mc_one.urdf
